--- a/notebooks/CH-03-A-Grounding.ipynb
+++ b/notebooks/CH-03-A-Grounding.ipynb
@@ -35,9 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import openai\n",
     "import os\n",
@@ -58,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,12 +131,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response: As an AI language model, I cannot predict future events. The Wimbledon tennis tournament for 2023 has not yet taken place. However, I can provide information on the previous tournament.\n",
+      "\n",
+      "The 2021 Wimbledon tennis tournament was held from June 28 to July 11, 2021, at the All England Lawn Tennis and Croquet Club in London, England. The tournament was canceled in 2020 due to the COVID-19 pandemic.\n",
+      "\n",
+      "In the men's singles final, Novak Djokovic of Serbia defeated Matteo Berrettini of Italy in four sets to win his sixth Wimbledon title and his 20th Grand Slam title overall, tying him with Roger Federer and Rafael Nadal for the most Grand Slam titles in men's tennis history.\n",
+      "\n",
+      "In the women's singles final, Ashleigh Barty of Australia defeated Karolína Plíšková of the Czech Republic in three sets to win her first Wimbledon title and her second Grand Slam title overall.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
-    "Enter Question Here\n",
+    "I need a report on the Wimbledon tennis tournament. Who was the 2023 winner for mens and womens singles?\n",
     "\"\"\"\n",
     "\n",
     "model_response = get_chat_completion(prompt, model=model)\n",
@@ -153,12 +179,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response: The winners of the 2023 Wimbledon tennis tournament for men's and women's singles were Carlos Alcaraz and Markéta Vondroušová, respectively. Alcaraz defeated Novak Djokovic, securing the world number one ranking and breaking the 20-year dominance of the Big Four (Djokovic, Rafael Nadal, Roger Federer, and Andy Murray-alternating-), which began in 2003 when Federer defeated Mark Philippoussis. Vondroušová defeated Ons Jabeur, becoming the third Czech female tennis player to win the trophy after Martina Navratilova and Petra Kvitova.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "prompt = f\"\"\"\n",
-    "Enter Question Here\n",
+    "context = \"\"\"Carlos Alcaraz en individuales masculinos y Markéta Vondroušová, en individuales femeninos respectivamente, se proclamaron campeones, el primero derroto al serbio Novak Djokovic, asegurando el N°1 del mundo y por si rompiendo 20 años de dominio que tuvieron el Big Four (el derrotado Djokovic, el español Rafael Nadal, el suizo Roger Federer y el escocés Andy Murray-alternados-, comenzado en el 2003, cuando el tercero, derrotara al australiano Mark Philippoussis), mientras que la segunda, derroto a la tunecina Ons Jabeur, proclamándose campeona y por si la tercera tenista mujer de origen checo en conseguir el trofeo, tras Martina Navratilova y Petra Kvitova.\"\"\"\n",
+    "\n",
+    "prompt = f\"\"\"I need a report on the Wimbledon tennis tournament. Who was the 2023 winner for mens and womens singles?\n",
+    "\n",
+    "Use context provided in the spanish language and return the answer in english. CONTEXT {context}\n",
+    "\n",
     "\"\"\"\n",
     "\n",
     "model_response = get_chat_completion(prompt, model=model)\n",
@@ -187,7 +226,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -201,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
